--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -10,16 +10,16 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
-    margin-left: 10px; /* Add some space between the title and the button */
+    margin-left: 0px; /* Add some space between the title and the button */
     padding: 0;
 }
 
 .playb .fa-play {
-    color: #007bff;
-    font-size: 20px;
+    color: black;
+    font-size: 17px;
 }
 
 .playb .fa-pause {
-  color: #007bff;
-  font-size: 20px;
+  color: black;
+  font-size: 17px;
 }
