add narration button to all text

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -17,9 +17,11 @@
 .playb .fa-play {
     color: black;
     font-size: 17px;
+    padding-right: 10px;
 }
 
 .playb .fa-pause {
   color: black;
   font-size: 17px;
+  padding-right: 10px;
 }
